--- a/TutorialAndDevGuide/Tutorial/mybib.bib
+++ b/TutorialAndDevGuide/Tutorial/mybib.bib
@@ -224,6 +224,19 @@ note = {Available at \url{http://www-verimag.imag.fr/index.php?page=techrep-list
 }
 
 
+@article{butler,
+ author = {Butler, R. W. and Finelli, G. B.},
+ title = {The Infeasibility of Quantifying the Reliability of Life-Critical Real-Time Software},
+ journal = {IEEE Transactions on Software Engineering},
+ volume = {19},
+ issue = {1},
+ month = {January},
+ year = {1993},
+ pages = {3--12},
+ publisher = {IEEE Press}
+}
+
+
 
 @PhdThesis{bauer,
   author =       {Andreas Klaus Bauer},
