--- a/TutorialAndDevGuide/Tutorial/Examples.tex
+++ b/TutorialAndDevGuide/Tutorial/Examples.tex
@@ -2,6 +2,6 @@
 
 Here we give a few examples of Copilot code. Additional examples can be found in the Examples directory of the Copilot language. 
 
-\input{MajVoteExample}
+\input{MajVoteExample} \label{subsec:boyer_moore}
 
-\input{WellClearExample}
+\input{WellClearExample} \label{subsec:well_clear}
