--- a/TutorialAndDevGuide/Tutorial/Advanced.tex
+++ b/TutorialAndDevGuide/Tutorial/Advanced.tex
@@ -214,6 +214,123 @@ just run \texttt{dot -Tps code.gv -o code.ps}
 \footnote{A script doing that automatically is provided here
 \url{https://raw.githubusercontent.com/Copilot-Language/examplesForACSL/master/WCV/scriptdot.cpp}}.
 
+\subsection{Compiling process}
+
+The Haskell source file is then compiled using the SBV backend. The file is first preprocessed using m4 into an other Haskell file with all constants replaced by their appropriate values. Then, after parsing, we obtain a first AST that is then reified to a core AST (some beta reduction are done), using standard reification techniques in \cite{Copilot06}. Then some AST transformers that keep the semantics are applied, transforming some operands that do not exist in SBV into expressions with only operators with SBV (recip, abs, ...). After this, we first transform the AST into an other one used by SBV, and in the process we generate both ACSL source code and DOT code. This means that the SBV AST contains "decorative" nodes that contain a ACSL or DOT code describing the child AST (TODO modify expression). 
+
+This nodes are then converted into comments into the C sources files that are then checked against the source code generated for the child AST with frama-c wp plugin. This helps us increase the confidence in the compilation process, by checking two different techniques (pretty printing and compilation) each against the other, hence reducing the probability that a similar bug is present both in the pretty printer (which generates the ACSL contracts) and the SBV compiler. Moreover, the same Haskell that has been written at top level has been checked with Metitarski after the m4 expansion. This can be shown by the following Figure~\ref{fig:WCVprocess} :
+
+
+\begin{figure}[hbt!]
+	\centering
+	\footnotesize
+	\begin{tikzpicture}[->, node distance=3cm, auto, shorten >=1pt, bend angle=45,
+	thick]
+	\tikzstyle{every state}=[rectangle, rounded corners]
+	
+	\node[state] (Lang) {%
+		\begin{tabular}[b]{l}
+		Copilot.Language AST
+		\end{tabular}};
+	
+	\node[state] (M5) [left=1.8cm of Lang] {\begin{tabular}[b]{l}
+		Preprocessed\\ Haskell
+		\end{tabular}};
+	\node[state] (M4) [below=1cm of M5] {Haskell};
+	\node[state] (RR) [below right of=Lang] {Reified AST};
+	\node[state] (Core) [below=0.3cm of RR] {Copilot.Core AST};
+	
+	
+	\node[state] (ACSL) [below right= 2cm of Core] {\begin{tabular}[b]{l}
+		ACSL\\ code
+		\end{tabular}};
+	\node[state] (DOTc) [right of=ACSL] {\begin{tabular}[b]{l}
+		DOT\\ code
+		\end{tabular}};
+	\node[state] (SBV) [below of=Core] {SBV AST};
+	\node[state] (C99S) [below of=SBV] {\begin{tabular}[b]{l}
+		DOT\\ \hline ACSL\\ \hline C99
+		\end{tabular}};
+	\node[state] (DOT) [below right of=C99S] {DOT/graphviz};
+	\node[state] (SMT) [left=3cm of SBV] {SMTLib code};
+	\node[state] (ASM) [below left of= C99S] {Assembly code};
+	
+	
+	\tikzstyle{every node}=[]
+	
+	
+	\path %% (Libs) edge node {0,1,L} (Lang);
+	%% edge node {1,1,R} (C)
+	(Lang) edge [bend left, anchor=west, text width=2.5cm] node {Reification and DSL-specific type-checking} (RR)
+	(RR) edge [anchor=west, text width=2.5cm] node {} (Core)
+	%% edge node {0,1,L} (C)
+	(M4) edge [text width=2.5cm, anchor = west] node {Preprocessing with m4} (M5)
+	(M5) edge [text width=1.5cm] node {Parsing} (Lang)
+	(Core) edge [anchor=east] node {Translation} (SBV)
+	(ACSL) edge [bend left, anchor=west] node {Integration} (C99S)
+	(DOTc) edge [bend left, anchor=east] node {} (C99S)
+	(Core) edge [->, anchor=north, text width=3cm] node {ACSL generation} (ACSL)
+	(Core) edge [->, anchor=west] node {DOT generation} (DOTc)
+	(RR) edge [bend right, ->, anchor=north east,text width=4cm] node {SMTlib generation of high level properties} (SMT)
+	(SMT) edge [loop below, ->, anchor=north,text width=4cm] node {Verification with an SMT solver (Z3,...)} (SMT)
+	(C99S) edge [->, anchor=east] node {Cross-compilation} (ASM)
+	(C99S) edge [loop left, ->, anchor=east] node {Verification with frama-c WP plugin} (C99S)
+	(C99S) edge [->, anchor=west] node {Extraction and graph generation} (DOT)
+	(SBV) edge [->,anchor=east] node {Compilation} (C99S);
+	%% edge [bend left] node {Translation} (SBV)
+	%% (Atom) edge [loop below] node {1,1,R} (D)
+	%% edge node {0,1,R} (Libs)
+	%% (SBV) edge [bend left] node {1,0,R} ();
+	\end{tikzpicture}
+	\caption{The whole process of WCV compilation.}
+	\label{fig:WCVprocess}
+\end{figure}
+
+\begin{figure}[hbt!]
+	\centering
+	\footnotesize
+	\begin{tikzpicture}[->, node distance=2.3cm, auto, shorten >=1pt, bend angle=45,thick]
+	\tikzstyle{every state}=[rectangle, rounded corners]
+	
+	\node[state] (Plane) {Planes};
+	\node[state] (GUI) [right of=Plane] {GUI};
+	\node[state] (Mon) [right=2cm of GUI] {monitor.c};
+	\node[state] (dr) [right of=Mon] {driver.c};
+	\node[state] (ex) [above right of=Mon] {external};
+	
+	
+	\node[state] (AL) [below of=GUI] {ALERT};
+	\node[state] (Co) [below of=Mon] {Converter};
+	
+	
+	\tikzstyle{every node}=[]
+	
+	
+	\path
+	(Plane) edge node {UDP} (GUI)
+	(GUI) edge [bend right] node {stdin} (Mon)
+	(Mon) edge [bend right] node {stdout} (GUI)
+	(Mon) edge [bend left, anchor=west] node {lat-long} (Co)
+	(Co) edge [bend left, anchor=west] node[left] {x,y,z} (Mon)
+	(Mon) edge [anchor=west] node {assign} (ex)
+	(Mon) edge [anchor=south] node {call} (dr)
+	(ex) edge [anchor=west] node {feed} (dr)
+	(GUI) edge node {} (AL);
+	\end{tikzpicture}
+	\caption{The ground station monitor structure}.
+	\label{fig:gss}
+\end{figure}
+
+Then we made it comply to real application with the following scheme in Figure~\ref{fig:gss} :
+\begin{itemize}
+	\item The planes send raw data via UDP network system in the form of lat-long-alt, tgs, hdg, vspeed.
+	\item All these data are collected by a GUI, that has the role of sending these data to the monitor, and getting back the monitor's data to show if any alert has been raised (the role of the GUI is to make the sound, or blink LEDs everywhere in the ALERT module).
+	\item The monitor.c is a c file that can receive 3 different instructions :
+	\subitem A new plane entered in the control area (ICAO24 given)
+	\subitem A plane is leaving the area (with ICAO24 given)
+	\subitem A plane is updating its coordinates (ICAO24 + lat-long-alt-hdg-tgs-vertical speed format). In this case, the plane is converting the coordinates into classical x,y,z with the Converter (TODO : put the real coordinates system somewhere). And then for all planes, it checks if this plane is in a WCV conflit with it (using the driver.c generated by Copilot). If yes, it raises an alert on stdout for every plane that is in conflict. 
+\end{itemize}
+
 \subsection{Cross compiling}~\label{sec:cross}
 
 If you go in the \texttt{copilot-sbv-codegen} folder, and run {\tt make all}
