--- a/TutorialAndDevGuide/Tutorial/Language.tex
+++ b/TutorialAndDevGuide/Tutorial/Language.tex
@@ -323,7 +323,7 @@ unsafeCast :: (Typed a, Typed b) => Stream a -> Stream b
 \end{lstlisting}
 
 \subsection{Interacting With the Target Program}
-\label{sec:interacting}
+\label{subsec:interacting}
 
 All interaction with the outside world is done by sampling \emph{external
   symbols} and by evoking \emph{triggers}.  External symbols are symbols that
