--- a/TutorialAndDevGuide/Tutorial/tutorial.tex
+++ b/TutorialAndDevGuide/Tutorial/tutorial.tex
@@ -301,6 +301,7 @@ Darafsheh, Alwyn Goodloe.
 }
 
 \begin{appendices}
+\input{WellClearCode}
 \input{Grammar/BNF}
 \input{Grammar/Typing}
 \end{appendices}
