--- a/TutorialAndDevGuide/Tutorial/WellClearCode.tex
+++ b/TutorialAndDevGuide/Tutorial/WellClearCode.tex
@@ -1,5 +1,7 @@
 \section{Well Clear Code}~\label{sec:WellClearCode}
 
+Here we give the specification for Well Clear as described in Section~\ref{WellClear}
+
 \begin{lstlisting}[language=Copilot]
 
 module WCV where
