--- a/TutorialAndDevGuide/Tutorial/mybib.bib
+++ b/TutorialAndDevGuide/Tutorial/mybib.bib
@@ -1166,3 +1166,15 @@ and J.  Svenningsson and A. Vajda},
  address = {New York, NY, USA},
  keywords = {DSL compilation, observable sharing},
 } 
+
+
+
+@inproceedings{Munoz2015DASC,
+        author = "C{\'e}sar Mu{\~{n}}oz and Anthony Narkawicz and George Hagen and Jason Upchurch and Aaron Dutle and Mar{\'{\i}}a Consiglio",
+        title = "{DAIDALUS}: {D}etect and {A}void {A}lerting {L}ogic for {U}nmanned {S}ystems",
+        booktitle = "Proceedings of the 34th Digital Avionics Systems 
+                     Conference (DASC 2015)",
+        address = "Prague, Czech Republic",
+        month = "September",
+        year = "2015"
+}
