--- a/TutorialAndDevGuide/Tutorial/tutorial.tex
+++ b/TutorialAndDevGuide/Tutorial/tutorial.tex
@@ -171,8 +171,17 @@ An Introduction to Copilot
 }
 \HRule
 
-\vspace{0.6cm}
+\vspace{1cm}
 
+\begin{minipage}{0.3\textwidth}
+\large
+\begin{center}
+Macallan Cruff\\
+\small{
+mcruff@andrew.cmu.edu\\
+}
+\end{center}
+\end{minipage}
 \begin{minipage}{0.3\textwidth}
 \large
 \begin{center}
@@ -180,9 +189,11 @@ Nis N. Wegmann\\
 \small{
 niswegmann@gmail.com\\
 }
-
 \end{center}
 \end{minipage}
+
+\vspace{1cm}
+
 \begin{minipage}{0.3\textwidth}
 \large
 \begin{center}
@@ -192,10 +203,6 @@ leepike@galois.com\\
 }
 \end{center}
 \end{minipage}
-\vspace{1cm}
-
-
-
 \begin{minipage}{0.3\textwidth}
 \large
 \begin{center}
@@ -205,6 +212,9 @@ hathhorn@gmail.com\\
 }
 \end{center}
 \end{minipage}
+\vspace{1cm}
+
+
 \begin{minipage}{0.3\textwidth}
 \large
 \begin{center}
@@ -214,9 +224,6 @@ sebastian.niller@gmail.com\\
 }
 \end{center}
 \end{minipage}
-
-\vspace{1cm}
-
 \begin{minipage}{0.3\textwidth}
 \large
 \begin{center}
@@ -226,6 +233,9 @@ lmpick@zoho.com\\
 }
 \end{center}
 \end{minipage}
+\vspace{1cm}
+
+
 \begin{minipage}{0.3\textwidth}
 \large
 \begin{center}
