Fixed two typo's in cbackend 2018 presentation

--- a/cbackend-pres2018/cbackend-pres2018.tex
+++ b/cbackend-pres2018/cbackend-pres2018.tex
@@ -183,7 +183,7 @@ static void step () {
 
 
 
-\begin{frame}[fragile]{Proposed solutuion: Separate streams}
+\begin{frame}[fragile]{Proposed solution: Separate streams}
   \begin{itemize}
     \item Current way to use structs in Copilot.
     \item Very easy to implement, requiring no changes to Copilot.
@@ -222,7 +222,7 @@ length (x, y) = sqrt (x*x + y*y)
 
 
 
-\begin{frame}[fragile]{Proposd solution: List of tuples}
+\begin{frame}[fragile]{Proposed solution: List of tuples}
   \begin{itemize}
     \item Easy to implement, fields can be accessed by their names.
     \item Needs a \texttt{lookup} function to access fields.
